Fix font size on mobile

--- a/uniu/src/styles/typography.css
+++ b/uniu/src/styles/typography.css
@@ -36,8 +36,13 @@ p {
 }
 
 h1 {
-  font-size: 3.5rem;
-  line-height: 3.5rem;
+  font-size: 2.5rem;
+  line-height: 2.5rem;
+
+  @media (--tablet) {
+    font-size: 3.5rem;
+    line-height: 3.5rem;
+  }
 
   @media (--laptop) {
     font-size: 6rem;
@@ -75,9 +80,14 @@ h4 {
 
 p {
   margin: 0;
-  font-size: 1.7rem;
-  line-height: 2.7rem;
+  font-size: 1.2rem;
+  line-height: 2.2rem;
   font-weight: 300;
+
+  @media (--tablet) {
+    font-size: 1.7rem;
+    line-height: 2.7rem;
+  }
 
   @media (--laptop) {
     font-size: 1.7rem;
